infra/k8s/modules/apps/admin/admin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-web
  labels:
    app.kubernetes.io/name: admin-web
    app.kubernetes.io/part-of: tessaro-admin
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: admin-web
      app.kubernetes.io/part-of: tessaro-admin
  template:
    metadata:
      labels:
        app.kubernetes.io/name: admin-web
        app.kubernetes.io/part-of: tessaro-admin
    spec:
      containers:
        - name: admin-web
          image: ttl.sh/tessaro-admin-1e9243e44cdf4934bf99b6ddf5cd706b:24h
          imagePullPolicy: Always
          ports:
            - containerPort: 4173
              name: http
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 30
            periodSeconds: 30
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 256Mi
