infra/k8s/modules/apps/admin/admin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: admin-web
  labels:
    app.kubernetes.io/name: admin-web
    app.kubernetes.io/part-of: tessaro-admin
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: admin-web
    app.kubernetes.io/part-of: tessaro-admin
  ports:
    - name: http
      port: 80
      targetPort: http
      nodePort: 31173
