infra/k8s/modules/apps/admin/admin-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: admin-web
  namespace: apps
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`admin.tessaro.dino.home`)
      kind: Rule
      services:
        - name: admin-web
          port: 30330
